--- a/first assignment/About.html
+++ b/first assignment/About.html
@@ -11,7 +11,9 @@
 </ul></header>
 <body>
    <img src="./" alt="Your Picture"><br>
-   My name is <b>Ndubuaku Tobechukwu</b>. I am a Cloud-Engineering student at AltSchool Africa and my student ID is <b>ALT/</b>
+   My name is <b>Ndubuaku Tobechukwu</b>. I am a Cloud-Engineering student at AltSchool Africa and my student ID is <b><ALT>
+   <SOE>
+   <023/2871></023/2871></b>
    <br>
    <h2>A LITTLE BIT ABOUT MYSELF</h2>
    <p>I don't think you can fully describe a person with few words. I just try to get things right. I am a movie enthusiast and I really like the weeknd. I hope this country becomes better someday and when I'm successful, I'd like to help people in poor communities</p>
