--- a/first assignment/About.html
+++ b/first assignment/About.html
@@ -11,7 +11,7 @@
 </ul></header>
 <body>
    <img src="./" alt="Your Picture"><br>
-   My name is <b>Ndubuaku Tobechukwu</b>. I am a Cloud-Engineering student at AltSchool Africa and my student ID is <b><ALT>
+   My name is <b>Ndubuaku Tobechukwu</b>. I am a Cloud-Engineering student at AltSchool Africa and my student ID is <b>ALT/SOE/023/2871</b>
    <SOE>
    <023/2871></023/2871></b>
    <br>
