--- a/first assignment/Sign Up.html
+++ b/first assignment/Sign Up.html
@@ -1,90 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="main.css" />
     <title>Document</title>
-</head>
-<header><ul>
-    <li><a href="./About.html">About Me</a></li>
-    <li><a href="./Sign Up.html">Sign-Up To Altschool</a></li>
-</ul></header>
-<body>
-    <form>
-        <h2>Application Form</h2>
-        <p>Fill In Your Documents</p>
-        <table cellspacing="0" cellpadding="10">
-            <tr>
-                <td>First Name* <br>
-                <input type="text" name="Enter First Name" id="" placeholder="Enter First Name"></td>
-                <td>Last Name* <br>
-                <input type="text" name="Enter Last Name" id="" placeholder="Enter Last Name"></td>
-            </tr>
-            <tr>
-                <td>Gender* <br>
-                <select name="Select Gender" id="" style="border-radius: 12px;color: rgb(4, 88, 167);">
-                    <option disabled selected>Choose Gender</option>
-                    <option>Male</option>
-                    <option>Female</option>
-                    <option>Binary</option>
-                </select></td>
-                <td>Date Of Birth<br>
-                    <input type="date" name="" id="">
-                </td>
-            </tr>
-            <tr>
-                <td>Country* <br>
-                <select name="Select Your Country" id="" style="border-radius: 12px;color: rgb(4, 88, 167);">
-                    <option disabled selected>Select Your Country</option>
-                    <option>Rwanda</option>
-                    <option>Nigeria</option>
-                </select></td>
-                <td>Education Level* <br>
-                <select name="Select level of education" id="" style="border-radius: 12px;color: rgb(4, 88, 167);">
-                    <option disabled selected>Select level of education</option>
-                    <option>UnderGraduate</option>
-                    <option>Graduate</option>
-                </select></td>
-            </tr>
-            <tr>
-                <td>Employment Status* <br>
-                    <select name="Select employment level" id="" style="border-radius: 12px;color: rgb(4, 88, 167);">
-                        <option disabled selected>Select employment level</option>
-                        <option>Unemployed</option>
-                        <option>Employed</option>
-                    </select></td>
-                <td>Phone Number* <br>
-                <input type="number" name="" id="" placeholder="08000000000"></td>
-            </tr>
-            <tr>
-                <td>Choose School* <br>
-                    <select name="Select school" id="" style="border-radius: 12px;color: rgb(4, 88, 167);">
-                        <option disabled selected>Select School</option>
-                        <option>School of Data</option>
-                        <option>School of Product</option>
-                        <option>School of Engineering</option>
-                    </select></td>
-                <td>Choose Course of Study* <br>
-                    <select name="Unavailable At The Moment" id="" style="border-radius: 12px;color: rgb(4, 88, 167);">
-                        <option disabled selected>Unavailable At The Moment</option>
-                    </select></td>
-            </tr>
-            <tr>
-                <td>How did you hear about us? *<br>
-                    <select name="Select Channel" id="" style="border-radius: 12px;color: rgb(4, 88, 167);">
-                        <option disabled selected>Select Channel</option>
-                        <option>Friend</option>
-                        <option>Twitter</option>
-                    </select></td>
-                <td>Scholarship Discount Code(optional)<br>
-                <input type="text" name="Scholarship Code" id="" placeholder="Scholarship or Student ID"></td>
-            </tr>
-            <tr>
-                <td>By Clicking continue, I agree to <a href="./Sign Up.html">Terms of Use</a> and acknowledge that I have read the <a href="./Sign Up.html">Privacy Policy</a></td>
-            </tr>
-            <tr><td><input type="submit" value="Proceed" style="color: white;background-color: rgb(4, 88, 167);border-radius: 12px;text-align: center;"></td></tr>
-        </table>
-        <footer><strong>Already have an account ? <a href="./Sign Up.html">Sign In</a></strong></footer>
-    </form>
-</body>
+  </head>
+
+  <body>
+    <section class="main">
+      <div class="mainLeft">
+        <img src="./Logo.png" alt="logo" class="logo" />
+        <h1 class="mainTitle">For Individuals</h1>
+        <p class="mainText">
+          Start benefiting from the wellness experience. For companies looking
+          on increasing productivity, and improving organization wellness.
+        </p>
+        <p class="mainTextMobile">
+          Inspiring wholesome harmony for the mind, body and spirit, for
+          everyone, everywhere.
+        </p>
+      </div>
+      <div class="formContainer">
+        <form>
+          <div class="formRow">
+            <div class="formRowColumn">
+              <div class="inputContainer">
+                <label class="formLabel" for="firstName">First Name</label>
+                <input id="firstName" type="text" class="textInput" />
+              </div>
+            </div>
+            <div class="formRowColumn">
+              <div class="inputContainer">
+                <label class="formLabel" for="lastName">Last Name</label>
+                <input id="lastName" type="text" class="textInput" />
+              </div>
+            </div>
+          </div>
+
+          <div class="formRow">
+            <div class="formRowColumn">
+              <div class="inputContainer">
+                <label class="formLabel" for="gender">Gender</label>
+                <input id="gender" type="text" class="textInput" />
+              </div>
+            </div>
+            <div class="formRowColumn">
+              <div class="inputContainer">
+                <label class="formLabel" for="dob">Date of Birth</label>
+                <input id="dob" type="text" class="textInput" />
+              </div>
+            </div>
+          </div>
+          <div class="formRow">
+            <div class="formRowColumn">
+              <div class="inputContainer">
+                <label class="formLabel" for="weight">Weight (KG)</label>
+                <input id="weight" type="text" class="textInput" />
+              </div>
+            </div>
+            <div class="formRowColumn">
+              <div class="inputContainer">
+                <label class="formLabel" for="height">Height (CM)</label>
+                <input id="height" type="text" class="textInput" />
+              </div>
+            </div>
+          </div>
+          <div class="formRow">
+            <div class="formRowColumn">
+              <div class="inputContainer">
+                <label class="formLabel" for="activityLevel"
+                  >Activity Level</label
+                >
+                <div class="selectHolder">
+                  <select id="activityLevel" type="" class="textInput">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                  <i class="fa fa-chevron-down"></i>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="formRow">
+            <div class="formRowColumn">
+              <div class="inputContainer">
+                <label class="formLabel" for="password">Password</label>
+                <input id="password" type="password" class="textInput" />
+              </div>
+            </div>
+          </div>
+          <div class="formRow">
+            <div class="formRowColumn">
+              <div class="inputContainer">
+                <input id="submit" type="submit" class="textInput" />
+              </div>
+            </div>
+          </div>
+
+          <div class="formFooterText">
+            By clicking Register, you agree to our
+            <span> Terms of Use</span> and our <span>Privacy Policy</span>
+          </div>
+        </form>
+      </div>
+    </section>
+  </body>
 </html>
